--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
     font-size: 4.5rem;
     color: rgb(249, 17, 17);
-    margin-top: 80px;
+    margin-top: 70px;
     margin-left: 70px;
     max-width: 500px;
 }
@@ -72,13 +72,14 @@ a:hover span {
     transform: translate3d(-200%, 0, 0);
 }
 
+/* /////////score board section */
 .card {
     display: flex;
     justify-content: space-around;
     background-color: rgb(80, 80, 6);
     border: 6px solid #fff;
     border-radius: 19px;
-    margin-top: 150px;
+    margin-top: 125px;
     max-width: 45%;
     margin-left: 750px;
     transform: rotate(4deg);
@@ -99,9 +100,11 @@ a:hover span {
 
 h2 {
     color: #fff;
-    font-family: 'Roboto', sans-serif;
-    font-size: 3rem;
+    font-family: 'digital-7', sans-serif;
+    font-size: 4rem;
     text-align: center;
+    letter-spacing: 0.30rem;
+
 }
 
 
@@ -119,7 +122,7 @@ h2 {
     border-radius: 4px;
     background: transparent;
     margin-top: 30px;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
     height: 45px;
     width: 45px;
     text-align: center;
@@ -134,12 +137,61 @@ h2 {
     background-color: #fff;
 }
 
+
+
+
+/* ///////////////whowon */
+
+#won-msg {
+    color: rgb(249, 17, 17);
+    font-family: 'digital-7', sans-serif;
+    font-size: 4rem;
+    width: 20em;
+    height: 1em;
+    letter-spacing: 0.15rem;
+    text-align: center;
+    margin: 2px 9rem;
+    padding: 20px 0px;
+    vertical-align: middle;
+}
+
+
+.btn-section {
+    margin-left: 75px;
+}
+
+
+
+#start-game {
+    background-color: black;
+    letter-spacing: 0.20rem;
+    color: rgb(249, 17, 17);
+    font-family: 'digital-7', sans-serif;
+    font-size: 1.8rem;
+    height: 3rem;
+    width: auto;
+    cursor: pointer;
+}
+
+#game-over {
+    background-color: black;
+    letter-spacing: 0.20rem;
+    color: rgb(249, 17, 17);
+    font-family: 'digital-7', sans-serif;
+    font-size: 1.8rem;
+    margin-left: 20px;
+    height: 3rem;
+    width: auto;
+    cursor: pointer;
+}
+
+
+
 footer {
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
     color: rgb(80, 80, 6);
     position: relative;
-    top: 120px;
     width: 100%;
     height: 30px;
     text-align: center;
